...
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.home.fragment.HomeFragment">

    <androidx.appcompat.widget.SearchView
            android:id="@+id/fragment_books_list_searchview"
            android:layout_width="match_parent"
            android:iconifiedByDefault="false"
            android:imeOptions="actionSearch"
            android:focusable="true"
            app:queryHint="@string/books_search_hint"
            android:layout_height="wrap_content"></androidx.appcompat.widget.SearchView>
...
            android:id="@+id/fragment_books_list_swipe_refresh_rv"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/general_padding"
            android:layout_below="@+id/fragment_books_list_searchview"
            android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_books_list_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
            android:id="@+id/fragment_books_list_layout_empty"
...
