...
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     android:id="@+id/activity_home_main_layout_old"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/fragment_book_details_appbar_layout"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/fragment_book_details_collapsing_toolbar"
...
